--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,10 +72,10 @@ variables:
     - schedules
 
 ########################
-##  SIXTINE BUILD INSTANCE
+##  bigdatagrapes BUILD INSTANCE
 ######################## 
 
-sixtine:build:
+bigdatagrapes:build:
   <<: *build_instance_with_opensilex_core
   script:
     # Create module folder if not exists
@@ -95,10 +95,10 @@ sixtine:build:
     paths:
       - $CI_PROJECT_DIR/$REVISION
       
-trigger:sixtine:deploy:test:
+trigger:bigdatagrapes:deploy:test:
   stage: deploy
   image: curlimages/curl
   script:
     - curl --request POST --form "variables[DEPLOY]=bdg-test" --form "token=$CI_JOB_TOKEN" --form "ref=master" --form "variables[COMMIT_SHA_OPENSILEX_DEV]=$COMMIT_SHA_OPENSILEX_DEV" https://forgemia.inra.fr/api/v4/projects/403/trigger/pipeline
   needs: 
-    - job: "sixtine:build"
+    - job: "bigdatagrapes:build"
