--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>inrae-sixtine</artifactId>
+    <artifactId>inrae-bigdatagrapes</artifactId>
     <packaging>jar</packaging>
-    <name>inrae-sixtine</name>
+    <name>inrae-bigdatagrapes</name>
 
     <properties>
         <revision>BUILD-SNAPSHOT</revision>
