--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "inrae-bigdatagrapes",
+    "name": "inrae-vitioeno",
     "version": "0.1.0",
     "private": true,
     "scripts": {
