--- a/pom.xml
+++ b/pom.xml
@@ -10,19 +10,18 @@
 ******************************************************************************
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>inrae-bigdatagrapes</artifactId>
+    <artifactId>inrae-vitioeno</artifactId>
     <packaging>jar</packaging>
-    <name>inrae-bigdatagrapes</name>
+    <name>inrae-vitioeno</name>
 
     <properties>
         <revision>BUILD-SNAPSHOT</revision>
         <skipFrontTypesGeneration>true</skipFrontTypesGeneration>
     </properties>
-    
+
     <parent>
         <groupId>org.opensilex</groupId>
         <artifactId>opensilex-module</artifactId>
