--- a/front/opensilex.front.yml
+++ b/front/opensilex.front.yml
@@ -7,17 +7,17 @@ menu:
   - id: shared
     label: component.menu.shared.label
     children:
-      - id: sharedInfrastructures
+      - id: infrastructures_vitioeno
         label: component.menu.infrastructure
         route:
           path: /infrastructures
           component: opensilex-InfrastructureView
-      - id: variables
+      - id: variables_vitioeno
         label: component.menu.variables
         route:
           path: /variables
-          component: opensilex-VariableView
-      - id: germplasm
+          component: opensilex-VariablesView
+      - id: germplasm_vitioeno
         label: component.menu.experimentalDesign.germplasm
         icon: ik-cloud-rain
         route:
