--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <artifactId>inrae-vitioeno</artifactId>
     <packaging>jar</packaging>
     <name>inrae-vitioeno</name>
+    <version>1.0.0</version>
 
     <properties>
         <revision>BUILD-SNAPSHOT</revision>
