--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ variables:
   NODE_CACHE: "$CI_PROJECT_DIR/opensilex-dev/.node"
   EMBDED_MONGO_CACHE: "/root/.embedmongo/"
   MODULE_ID: "inrae-vitioeno"
+  MODULE_REVISION : "1.0.0"
 
 ########################
 ##  CACHE TEMPLATE
@@ -65,7 +66,7 @@ variables:
       fi
     # Build opensilex-dev for module compilation
     - cd $CI_PROJECT_DIR/opensilex-dev
-    - mvn clean install $MAVEN_CLI_OPTS -Pfor-module -Drevision=$REVISION
+    - mvn clean install $MAVEN_CLI_OPTS -Pfor-module -Drevision=$MODULE_REVISION
   stage: build
   image: maven:$MVN_VERSION-jdk-$JAVA_VERSION
   except:
@@ -90,7 +91,7 @@ vitioeno:build:
     - cd $CI_PROJECT_DIR/opensilex-dev/$MODULE_ID
     - mvn install $MAVEN_CLI_OPTS -Drevision=$REVISION
     # Copy generated JAR module into opensilex-dev artifact "modules" folder
-    - mv $CI_PROJECT_DIR/opensilex-dev/$MODULE_ID/target/$MODULE_ID-$REVISION.jar $CI_PROJECT_DIR/$REVISION/modules/$MODULE_ID.jar
+    - mv $CI_PROJECT_DIR/opensilex-dev/$MODULE_ID/target/$MODULE_ID-$MODULE_REVISION.jar $CI_PROJECT_DIR/$REVISION/modules/$MODULE_ID.jar
   artifacts:
     paths:
       - $CI_PROJECT_DIR/$REVISION
