--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ variables:
       fi
     # Build opensilex-dev for module compilation
     - cd $CI_PROJECT_DIR/opensilex-dev
-    - mvn clean install $MAVEN_CLI_OPTS -Pfor-module -Drevision=$MODULE_REVISION
+    - mvn clean install $MAVEN_CLI_OPTS -Pfor-module -Drevision=$REVISION
   stage: build
   image: maven:$MVN_VERSION-jdk-$JAVA_VERSION
   except:
