--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
         "serve": "vue-cli-service build --target lib --formats umd-min src/index.ts --mode development --watch",
         "build": "vue-cli-service build --target lib --formats commonjs,umd-min src/index.ts --mode production",
         "lint": "vue-cli-service lint",
+        "check:browserlist": "yarn add caniuse-lite && yarn remove caniuse-lite",
         "check:outdated": "yarn outdated || cd .",
         "check:security": "yarn audit || cd ."
     },
