--- a/front/opensilex.front.yml
+++ b/front/opensilex.front.yml
@@ -1,8 +1,8 @@
 menu:
   - id: vitioeno-news
-    label: component.menu.news.label
-    icon: ik#ik-twitter
+    label: component.menu.news.label 
     route:
+      icon: ik#ik-twitter
       component: inrae-vitioeno-VitioenoHomeComponent
       path: /news
   - id: vitioeno-shared
@@ -14,19 +14,18 @@ menu:
           path: /variables
           component: opensilex-VariablesView
       - id: germplasm_vitioeno
-        label: component.menu.experimentalDesign.germplasm
-        icon: ik-cloud-rain
+        label: component.menu.experimentalDesign.germplasm 
         route:
+          icon: ik-cloud-rain
           path: /germplasm
           component: inrae-vitioeno-GermplasmView
   - id: vitioeno-references
     label: component.menu.references.label
-    icon: ik#git-fork
     children:
       - id: ontologies
         label: component.menu.references.ontologies.label
-        icon: ik-dribbble
         route:
+          icon: ik#ik-dribbble
           path: /ontologies
           component: inrae-vitioeno-OntologiesView
       - id: documents
@@ -37,11 +36,13 @@ menu:
       - id: links
         label: component.menu.references.links.label
         route:
+          icon: ik#ik-award
           component: inrae-vitioeno-LinksView
           path: /links
   - id: vitioeno-apps
     label: component.menu.applications.label
     route:
+      icon: ik#ik-tablet
       path: /dataAnalysis/apps
       component: opensilex-data-analysis-ApplicationView
   - id: vitioeno-configuration
