--- a/front/opensilex.front.yml
+++ b/front/opensilex.front.yml
@@ -27,9 +27,6 @@ menu:
           description: GermplasmView.description
           path: /germplasm
           component: inrae-vitioeno-GermplasmView
-  - id: vitioeno-references
-    label: component.menu.references.label
-    children:
       - id: ontologies
         label: component.menu.references.ontologies.label
         route:
@@ -46,14 +43,25 @@ menu:
           icon: ik#ik-file-text
           title: DocumentView.title
           description: DocumentView.description
-      - id: links
-        label: component.menu.references.links.label
+  - id: vitioeno-references
+    label: component.menu.references.label
+    children: 
+      - id: data_links
+        label: component.menu.references.links.data.label
         route:
           icon: ik#ik-award
           component: inrae-vitioeno-LinksView
-          path: /links
-          title:  component.menu.references.links.label
-          description:  component.menu.references.links.description
+          path: /links/data
+          title:  component.menu.references.links.data.label
+          description:  component.menu.references.links.data.description
+      - id: information_links
+        label: component.menu.references.links.information.label
+        route:
+          icon: ik#ik-award
+          component: inrae-vitioeno-LinksView
+          path: /links/information
+          title:  component.menu.references.links.information.label
+          description:  component.menu.references.links.information.description
   - id: vitioeno-apps
     label: component.menu.applications.label
     route:
@@ -83,30 +91,13 @@ menu:
           icon: ik#ik-layers
           title: SystemView.title
           description: SystemView.title-description
-  - id: user_groups_vitioeno
-    label: component.menu.users-groups.label
-    children:
-      - id: users
-        label: component.menu.security.users
-        route:
-          path: /users
-          component: opensilex-UserView
-          credentials:
-            - user-modification
-          icon: ik#ik-user
-          title: UserView.title
-          description: UserView.description
-      - id: groups
-        label: component.menu.security.groups
-        route:
-          path: /groups
-          component: opensilex-GroupView
-          credentials:
-            - group-modification
-          icon: ik#ik-users
-          title: component.menu.security.groups
-          description: component.group.description
-
+  - id : about_view
+    label : component.menu.about.label
+    route:
+        path: /about
+        component: inrae-vitioeno-AboutView  
+        title: AboutView.title
+        description: AboutView.description
 routes:      
   - path: /germplasm/details/:uri
     component: opensilex-GermplasmDetails
