--- a/front/package.json
+++ b/front/package.json
@@ -1,7 +1,8 @@
 {
     "name": "inrae-vitioeno",
-    "version": "2.1.1",
+    "version": "3.0.0",
     "private": true,
+    "license": "AGPL-3.0-only",
     "scripts": {
         "serve": "vue-cli-service build --target lib --formats umd-min src/index.ts --mode development --watch",
         "build": "vue-cli-service build --target lib --formats commonjs,umd-min src/index.ts --mode production",
